...
          contentContainerStyle={{ flexGrow: 1 }}
          keyboardShouldPersistTaps="handled"
        >
          <View className="flex-1 justify-center items-center p-9 w-full">
            <View className="flex-col justify-center items-center mb-12 gap-3">
              <UserIcon />
              <Text className="text-white text-3xl font-irishGrover text-center" adjustsFontSizeToFit numberOfLines={1}>Entrar na sua conta</Text>
            </View>

            <View className="w-full gap-3">
              <Text className="text-white font-itim">Email</Text>
              <TextInput
                keyboardType="email-address"
...
              )}

              <Pressable onPress={handleSubmit} className="bg-[#EAAA6a] p-4 mt-4 items-center justify-center rounded-xl active:opacity-70">
                <Text className="font-itim text-lg">Entrar</Text>
              </Pressable>

              <Text className="text-white font-itim text-lg text-center">Não possui uma conta? <Link href={"/user/auth/signup"} className="text-cyan-500">Cadastre-se</Link></Text>
            </View>
          </View>
        </ScrollView>
      </KeyboardAvoidingView>
    </ImageBackground>
  )
...
