...
                <Text className="font-itim text-lg opacity-70">Recompensa</Text>
                <Text className="font-itim text-3xl">{xpQuantity} <Text className="text-center text-xl font-itim">XP</Text></Text>
              </View>
            </View>

            <Pressable onPress={() => setOpenLocomotionModal(true)} className="bg-[#EAAA6A] w-full p-4 items-center justify-center rounded-lg active:opacity-65">
              <Text className="font-itim text-xl text-center">Ir agora</Text>
            </Pressable>
          </View>
        </View>
      </View>
    </Modal>
  )
...
