...
              onPress={() => router.push({
                pathname: "/user/(private)/payment/pix-payment",
                params: { id: product.id, discount }
              })}
              className="bg-[#311e08] p-4 items-center justify-center rounded-xl active:opacity-70"
            >
              <Text className="text-white font-interBold text-lg">Pagar com PIX</Text>
            </Pressable>
            <Text className="opacity-55 text-sm text-center font-inter">Você será redirecionado para o QR Code do PIX</Text>
          </View>

        </View>
      </ScrollView>
...
